--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,469</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">safari browser test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">37,802</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.ResgistrationPageTest</td><td><a href="#m0">Verify_RegistrationPage</a></td><td rowspan="1">1764612712253</td><td rowspan="1">720</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">safari browser test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.LoginPageTest</td><td><a href="#m0">Verify_LoginPage</a></td><td rowspan="1">1765706323756</td><td rowspan="1">1099</td></tr><tr class="passedodd"><td rowspan="1">testCases.ResgistrationPageTest</td><td><a href="#m1">Verify_RegistrationPage</a></td><td rowspan="1">1765706305758</td><td rowspan="1">2741</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testCases.ResgistrationPageTest#Verify_RegistrationPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>safari browser test</h2><h3 id="m0">testCases.LoginPageTest#Verify_LoginPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.ResgistrationPageTest#Verify_RegistrationPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
