--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">safari browser test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">37,802</td><td></td><td></td></tr>
+<tr><td><a href="#t0">safari browser test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">28,947</td><td>regression, sanity</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">safari browser test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.LoginPageTest</td><td><a href="#m0">Verify_LoginPage</a></td><td rowspan="1">1765706323756</td><td rowspan="1">1099</td></tr><tr class="passedodd"><td rowspan="1">testCases.ResgistrationPageTest</td><td><a href="#m1">Verify_RegistrationPage</a></td><td rowspan="1">1765706305758</td><td rowspan="1">2741</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">safari browser test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testCases.LoginPageTest</td><td><a href="#m0">Verify_LoginPage</a></td><td rowspan="1">1765884646429</td><td rowspan="1">1232</td></tr><tr><th colspan="4">safari browser test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.LoginPageTest</td><td><a href="#m1">Verify_LoginPage</a></td><td rowspan="1">1765884645652</td><td rowspan="1">776</td></tr><tr class="passedodd"><td rowspan="1">testCases.ResgistrationPageTest</td><td><a href="#m2">Verify_RegistrationPage</a></td><td rowspan="1">1765884631271</td><td rowspan="1">2063</td></tr></tbody>
 </table>
-<h2>safari browser test</h2><h3 id="m0">testCases.LoginPageTest#Verify_LoginPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testCases.ResgistrationPageTest#Verify_RegistrationPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>safari browser test</h2><h3 id="m0">testCases.LoginPageTest#Verify_LoginPage</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>arjunsathish@gmail.com</td><td>onnurendu</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.AssertionError: null
+	at testCases.LoginPageTest.Verify_LoginPage(LoginPageTest.java:47)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1604)
+... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.LoginPageTest#Verify_LoginPage</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>melisandra.2345@gmail.com</td><td>sandraj</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testCases.ResgistrationPageTest#Verify_RegistrationPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
